# termermaid

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: canvas.rs  graph.rs  layout.rs  lib.rs  main.rs  mermaid.rs  parse.rs  pie.rs  sequence.rs  theme.rs
