[package]
name = "termermaid"
version = "0.4.0"
edition = "2021"
description = "Terminal Mermaid diagram renderer — Unicode box-drawing art from Mermaid syntax. 5 diagram types, pure Rust."
license = "Apache-2.0"
repository = "https://github.com/alitrack/termermaid"
readme = "README.md"
documentation = "https://github.com/alitrack/termermaid"
keywords = ["mermaid", "terminal", "diagram", "unicode", "cli"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
unicode-width = "0.2"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[lib]
name = "termermaid"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "termermaid"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]
