[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "termermaid"
version = "0.1.0"
description = "Terminal Mermaid diagram renderer"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
